--- a/alacritty_terminal/Cargo.toml
+++ b/alacritty_terminal/Cargo.toml
@@ -26,10 +26,18 @@ regex-automata = "0.4.3"
 unicode-width = "0.1"
 vte = { version = "0.13.0", default-features = false, features = ["ansi", "serde"] }
 serde = { version = "1", features = ["derive", "rc"], optional = true }
+mio = "0.6.20"
+mio-extras = "2"
+dirs = "3.0.1"
+zeromq = "0.4.0"
 
 [target.'cfg(unix)'.dependencies]
 rustix-openpty = "0.1.1"
+nix = "0.22.0"
 signal-hook = "0.3.10"
+signal-hook-mio = { version = "0.2.1", features = ["support-v0_6"] }
+libproc = "0.14.8"
+tokio = { version = "1", features = ["full"] }
 
 [target.'cfg(windows)'.dependencies]
 piper = "0.2.1"
