--- a/alacritty_terminal/Cargo.toml
+++ b/alacritty_terminal/Cargo.toml
@@ -26,6 +26,7 @@ unicode-width = "0.1"
 base64 = "0.13.0"
 regex-automata = "0.1.9"
 dirs = "3.0.1"
+zmq = "0.9.2"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.19.0"
